<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MicroDustWarning</string>
    <string name="about">About</string>
    <string name="start">시작하기</string>
    <string name="hello">미세먼지 알림</string>
    <string name="setting">설정</string>

    <string name="hello_blank_fragment">
        서울에서 당신이 서 있는 공간의 공기질을\n
        1시간 간격으로 알려드니다.\n
        파란색은 좋은 상태를 나타내며\n
        연두색은 보통의 상황을 나타냅니다.\n\n
        만약\n
        노란색과 주황색, 빨간색글자로 나타난다면\n
        외출을 삼가해 주세요. :-)\n\n
    </string>
    <string name="hello_world">안녕하세요?\n앱을 시작하기 위해서는\n우측 상단 메뉴이나 메뉴키를 눌러서 자동실행ON으로 해주세요.</string>
    <string name="btn_switch_on">ON</string>
    <string name="btn_switch_off">OFF</string>

    <string name="on_construction">현재 준비 중입니다. 조금만 기다려 주세요.</string>

    <string name="service_is_on_wait_a_minute">실행 했습니다. 앱을 종료하시거나 잠시 기다려주세요. ;-)</string>

    <string name="btn_start">시작</string>

    <!-- Setting -->
    <string name="setting_send_feed_back">의견 보내기</string>
    <string name="setting_infomation">microdust 정보</string>
    <string name="setting_thanks_to">Thanks to...</string>

    <!-- Menu -->
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_swtich_on">자동실행 ON</string>
    <string name="action_swtich_off">자동실행 OFF</string>

    <string name="action_about">About</string>

    <string name="desc_red">빨간색은 위험</string>
    <string name="desc_blue">파란색은 좋음\n</string>
    <string name="desc_ligth_green">연두색은 보통\n</string>
    <string name="desc_yellow">노란색은 약간 안 좋음\n</string>
    <string name="desc_orange">주황색은 안 좋음\n</string>

    <string name="start_checkbox_desc">자동으로 실행하시겠습니까?</string>

    <string name="str_no_location">위치 정보를 가져올 수 없습니다. 위치정보를 켜주세요.</string>
    <string name="can_only_use_in_seoul">\"죄송합니다. 현재 서울에서만 사용하실 수 있습니다.\"</string>

    <string name="micro_dust">미세먼지</string>
    <string name="so2">아황산가스</string>
    <string name="no2">이산화질소</string>
    <string name="co">일산화탄소</string>
    <string name="o3">오존</string>

    <!-- 좋은상황 -->
    <string name="good">실외 활동을 하기에 좋은 날입니다.</string>

    <!-- 일반상황 -->
    <string name="normal_o3">노약자: 실외활동 자제</string>
    <!-- 약간 안 좋음 -->
    <string name="bad_micro_dust">호흡기(ex. 천식) 혹은 심질환자: 장시간의 실외활동 자제\n</string>
    <string name="bad_o3">활동량 많은 어린이와 성인, 호흡기질환자(ex. 천식): 장시간의 실외활동 자제\n</string>
    <string name="bad_co">심혈관질환자(ex. 협심증): 무리한 작업 자제권고, CO 오염원이 있는 교통체증 지역에서의 활동 자제\n</string>
    <string name="bad_so2">천식질환자: 실외활동 자제</string>
    <!-- 나쁜 상황 -->
    <string name="worse_micro_dust">심장, 폐질환자, 노인, 어린이: 장시간 또는 무리한 활동 자제권고\n일반군: 장시간 또는 무리한 활동 자제\n</string>
    <string name="worse_o3">활동량 많은 어린이와 성인 호흡기질환자(ex. 천식): 장시간의 실외활동 자제 권고\n건강집단내 어린이: 장시간의 실외활동 자제\n오존 주의보 발령\n</string>
    <string name="worse_co">심혈관질환자(ex. 협심증): 일상수준의 작업도 자제, CO 오염원이 있는 교통제증 지역은 피할 것을 권고\n</string>
    <string name="worse_so2">어린이, 천식환자, 심장, 폐질환자: 실외활동 자제 권고</string>
    <!-- 위험 상황 -->
    <string name="worst_micro_dust">호흡기(ex. 천식) 질환자, 노약자: 실외활동 제한\n</string>
    <string name="worst_o3">활동량 많은 어린이와 성인 호흡기질환자(ex. 천식): 실외 활동 금지\n일반군: 실외활동 제한\n오존 경보 발령\n</string>
    <string name="worst_no2">호흡기(ex. 천식)질환 어린이, 성인: 과도한 실외활동 제한\n</string>
    <string name="worst_co">심혈관질환자(ex. 협심증): 일상수준의 작업도 제한, 교통제증 지역 활동 제한\n</string>
    <string name="worst_so2">어린이, 천식환자, 심장, 폐질환자: 실외활동 제한\n일반군: 실외활동 자제 권고</string>

    <!-- Dialog -->
    <string name="dlg_default_title">알림</string>

    <string name="dlg_status_good_title">상쾌한 운동을 해보는 건 어떨까요?</string>
    <string name="dlg_status_normal_title">밖으로 나가보는 건 어떠신가요?</string>
    <string name="dlg_status_bad_title">장시간 외출은 피하세요.</string>
    <string name="dlg_status_worse_title">집에 계시는 걸 권해드려요.</string>
    <string name="dlg_status_worst_title">나가지 마세요. 공기가 좋지 않아요!</string>

    <string name="dlg_default_positive_button">확인</string>

    <string name="dlg_warn_out_of_seoul">
        서울외 지역은 외부화면에서 확인할 수 있습니다.
        \n화면을 이동하시겠습니까?
    </string>

    <string name="dlg_btn_move">이동</string>
    <string name="dlg_btn_cancel">취소</string>
    <!-- Preferences -->
    <string name="pref_default_category_title">기본</string>

    <string name="pref_title_noti_on">진동알림</string>
    <string name="pref_summary_noti_off">알림이 올 때 진동을 끕니다.</string>
    <string name="pref_summary_noti_on">알림이 올 때 진동을 켭니다.</string>

    <!-- Preferences Key -->
    <string name="pref_key_default_category">default_category</string>
    <string name="pref_key_noti_on">notice_vibrate</string>


    <!-- InfoActivity -->
    <string name="info_thanks_to">
        우리 딸 은율이의 안전한(?) 외출을 위해서 아빠의 마음으로 만들었습니다. 아내와 아이에게! 그리고 Close Beta를 하면서 테스트를 해주고 진심어린 feedback을 지인분들께 감사인사를 드립니다.
        옆에서 재밌게 웃겨 준 gyaleon형에게도 ㅋㅋㅋㅋ
        \n\n정말 감사합니다.
    </string>
    <string name="info_infomation">
        이 앱을 상태바에 알림(Notification)을 보내서 1시간마다 측정하고 있는 대기 정보를 보여주는 앱입니다.
        \n자료는
        \nhttp<![CDATA[://]]>cleanair.seoul.go.kr
        \nhttp<![CDATA[://]]>kaq.or.kr 에서 수치와 이미지를 가져와서 보여줍니다.
        \n\n따로 API로 가져오지 않고 jericho html parser를 사용해서 웹페이지에서 가져옵니다. 그래서 만약 address나 구조가 변경되면 앱이 실행되지 않을 수 있습니다.
        \n\n앱을 만드는 데 참여나 잔소리가 하고 싶으신 분은
        \nhttps<![CDATA[://]]>github.co<![CDATA[/]]>yeojoy<![CDATA[/]]>microdust 에서 source code를 확인하실 수 있습니다. 이슈제기 혹은 아이디어 적용 환영합니다.
        \n\n관심을 가져주셔서 감사합니다. ;-)
    </string>
</resources>
