<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.yeojoy.microdustwarning.DustActivity" >
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_popup_sync" />

    <item
        android:id="@+id/action_on_off"
        android:title="@string/btn_switch_off"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:checkable="true"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

</menu>
