<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StartFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_main_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:lineSpacingExtra="5dp"
        android:gravity="center_horizontal"
        android:text="@string/hello_blank_fragment" />

    <CheckBox
        android:id="@+id/cb_auto_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_start"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/start_checkbox_desc"
        android:paddingLeft="5dp"/>

    <Button
        android:id="@id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_start" />
</RelativeLayout>
